fix footer -> delet shity overflow auto

--- a/www/src/scss/layouts/_containers.scss
+++ b/www/src/scss/layouts/_containers.scss
@@ -22,7 +22,6 @@
   display: flex;
   flex-flow: column nowrap;
   flex-basis: 100%;
-  overflow: auto;
   padding: 0px 20px;
 }
 
